champions/71_rust/ffi.rs


impl CToRust<api::PandaInfo> for PandaInfo {
    unsafe fn to_rust(self) -> api::PandaInfo {
        api::PandaInfo {
            panda_pos: self.panda_pos.to_rust(),
            id_joueur: self.id_joueur.to_rust(),
            id_panda: self.id_panda.to_rust(),
            num_bebes: self.num_bebes.to_rust(),
        }
    }
}

impl RustToC<PandaInfo> for api::PandaInfo {
    unsafe fn to_c(&self) -> PandaInfo {
        PandaInfo {
            panda_pos: self.panda_pos.to_c(),
            id_joueur: self.id_joueur.to_c(),
            id_panda: self.id_panda.to_c(),
            num_bebes: self.num_bebes.to_c(),
        }
    }
}

// Conversions for bebe_info

impl CToRust<api::BebeInfo> for BebeInfo {
    unsafe fn to_rust(self) -> api::BebeInfo {
        api::BebeInfo {
            bebe_pos: self.bebe_pos.to_rust(),
            id_bebe_joueur: self.id_bebe_joueur.to_rust(),
        }
    }
}

impl RustToC<BebeInfo> for api::BebeInfo {
    unsafe fn to_c(&self) -> BebeInfo {
        BebeInfo {
            bebe_pos: self.bebe_pos.to_c(),
            id_bebe_joueur: self.id_bebe_joueur.to_c(),
        }
    }
}

// Conversions for tour_info

impl CToRust<api::TourInfo> for TourInfo {
    unsafe fn to_rust(self) -> api::TourInfo {
        api::TourInfo {
            id_panda_joue: self.id_panda_joue.to_rust(),
            id_tour: self.id_tour.to_rust(),
        }
    }
}

impl RustToC<TourInfo> for api::TourInfo {
    unsafe fn to_c(&self) -> TourInfo {
        TourInfo {
            id_panda_joue: self.id_panda_joue.to_c(),
            id_tour: self.id_tour.to_c(),
        }
    }
}

// Conversions for carte_info

impl CToRust<api::CarteInfo> for CarteInfo {
    unsafe fn to_rust(self) -> api::CarteInfo {
        api::CarteInfo {
            taille_x: self.taille_x.to_rust(),
            taille_y: self.taille_y.to_rust(),
        }
    }
}

impl RustToC<CarteInfo> for api::CarteInfo {
    unsafe fn to_c(&self) -> CarteInfo {
        CarteInfo {
            taille_x: self.taille_x.to_c(),
            taille_y: self.taille_y.to_c(),
        }
    }
}

// Conversions for action_hist

impl CToRust<api::ActionHist> for ActionHist {
    unsafe fn to_rust(self) -> api::ActionHist {
        api::ActionHist {
            type_action: self.type_action.to_rust(),
            action_id_panda: self.action_id_panda.to_rust(),
            dir: self.dir.to_rust(),
            valeur_debut: self.valeur_debut.to_rust(),
            valeur_fin: self.valeur_fin.to_rust(),
            pos_debut: self.pos_debut.to_rust(),
            pos_fin: self.pos_fin.to_rust(),
        }
    }
}

impl RustToC<ActionHist> for api::ActionHist {
    unsafe fn to_c(&self) -> ActionHist {
        ActionHist {
            type_action: self.type_action.to_c(),
            action_id_panda: self.action_id_panda.to_c(),
            dir: self.dir.to_c(),
            valeur_debut: self.valeur_debut.to_c(),
            valeur_fin: self.valeur_fin.to_c(),
            pos_debut: self.pos_debut.to_c(),
            pos_fin: self.pos_fin.to_c(),
        }
    }
}


// Import API functions

extern {
    fn free(ptr: *mut c_void);
    fn malloc(size: usize) -> *mut c_void;

    pub fn deplacer(dir: Direction) -> Erreur;
    pub fn poser(position_debut: Position, dir: Direction, pont_debut: c_int, pont_fin: c_int) -> Erreur;
    pub fn debug_afficher_drapeau(pos: Position, drapeau: DebugDrapeau) -> Erreur;
    pub fn type_case(pos: Position) -> CaseType;
    pub fn panda_sur_case(pos: Position) -> c_int;
    pub fn bebe_panda_sur_case(pos: Position) -> c_int;
    pub fn position_panda(id_joueur: c_int, id_panda: c_int) -> Position;
    pub fn info_pont(pos: Position) -> PontType;
    pub fn info_panda(pos: Position) -> PandaInfo;
    pub fn liste_pandas() -> Array<PandaInfo>;
    pub fn liste_bebes() -> Array<BebeInfo>;
    pub fn positions_adjacentes(pos: Position) -> Array<Position>;
    pub fn position_dans_direction(pos: Position, dir: Direction) -> Position;
    pub fn direction_entre_positions(origine: Position, cible: Position) -> c_int;
    pub fn historique() -> Array<ActionHist>;
    pub fn score(id_joueur: c_int) -> c_int;
    pub fn moi() -> c_int;
    pub fn adversaire() -> c_int;
    pub fn info_tour() -> TourInfo;
    pub fn info_carte() -> CarteInfo;
    pub fn afficher_case_type(v: CaseType);
    pub fn afficher_direction(v: Direction);
    pub fn afficher_erreur(v: Erreur);
    pub fn afficher_action_type(v: ActionType);
    pub fn afficher_debug_drapeau(v: DebugDrapeau);
    pub fn afficher_position(v: Position);
    pub fn afficher_pont_type(v: PontType);
    pub fn afficher_panda_info(v: PandaInfo);
    pub fn afficher_bebe_info(v: BebeInfo);
    pub fn afficher_tour_info(v: TourInfo);
    pub fn afficher_carte_info(v: CarteInfo);
    pub fn afficher_action_hist(v: ActionHist);
}

// Export user functions

#[no_mangle]
unsafe extern "C" fn partie_init() {
    crate::partie_init().to_c()
}

#[no_mangle]
unsafe extern "C" fn jouer_tour() {
    crate::jouer_tour().to_c()
}

#[no_mangle]
unsafe extern "C" fn partie_fin() {
    crate::partie_fin().to_c()
}
